<resources>
    <string name="app_name">Minsk GURU</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_out">Log Out</string>
    <string name="unknown">Unknown</string>

    <!--bottom navigation-->
    <string name="bottom_navigation_places">Places</string>
    <string name="bottom_navigation_add_place">Add Place</string>
    <string name="bottom_navigation_profile">Profile</string>

    <!--auth-->
    <string name="auth_button_sign_in">Sign in</string>
    <string name="auth_button_sign_up">Sign up</string>
    <string name="auth_forgot_password"><u>Forgot password?</u></string>
    <string name="auth_don_t_have_an_account">Don\'t have an account?</string>
    <string name="auth_sign_up"><u>Sign up!</u></string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>

    <!--achievements-->
    <string name="achievements_percentage">%1$d%%</string>
    <string name="category_museum">Музеи</string>

    <!--places-->
    <string name="visited_yet">Visited yet?</string>

    <!--profile-->
    <string name="full_name">%1$s %2$s</string>

    <!--error-->
    <string name="error_default">Unknown error</string>

    <!--place details-->
    <string name="prove_you_ve_been_here_hint">Prove you\'ve been here:</string>
    <string name="is_visited_hint">Place is visited.\nNo need to prove.</string>
    <string name="prove_failed_hint">Prove failed!</string>
    <string name="prove_calculation_body">%1$d + %2$d = </string>
    <string name="empty_opening_hours">No opening hours info</string>
    <string name="empty_phone">No phone info</string>
    <string name="empty_url">No url info</string>
</resources>