<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/placesFragment"
        android:icon="@drawable/ic_places"
        android:orderInCategory="1"
        android:title="@string/bottom_navigation_places"
        app:showAsAction="always" />

    <item
        android:id="@+id/addPlaceFragment"
        android:icon="@drawable/ic_add_place"
        android:orderInCategory="2"
        android:title="@string/bottom_navigation_add_place"
        app:showAsAction="always" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="3"
        android:title="@string/bottom_navigation_profile"
        app:showAsAction="ifRoom" />

</menu>